cart.scss .product-list{align-items fix}

--- a/src/pages/Cart/Cart.scss
+++ b/src/pages/Cart/Cart.scss
@@ -24,7 +24,7 @@
     .product-list {
       display: flex;
       flex-direction: column;
-      align-items: start;
+      align-items: flex-start;
 
       img {
         width: 85px;
